5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1800_2567.log
== TEST (2019-06-10 23:37:08) 
-- CODE:
from numpy import *
n = input("Digite um numero: ")
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:38:10) 
-- CODE:
from numpy import *
n = input("Digite um numero: ")

for * in n:
	print(*)
-- ERROR:
File "XXXX", line 4
    for * in n:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:41:32) 
-- CODE:
from numpy import *
n = input("Digite um numero: ")

x = "*"
for x in n:
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:41:41) 
-- CODE:
from numpy import *
n = input("Digite um numero: ")

x = "*"
for x in n:
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:42:41) 
-- CODE:
from numpy import *
n = input("Digite um numero: ")

x = "*"
for n in "*":
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:46:06) 
-- CODE:
from numpy import *
n = input("Digite um numero: ")

x = "*"
while(x<=n):
	print(x)
	x = x + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:46:20) 
-- CODE:
from numpy import *
n = input("Digite um numero: ")

x = "*"
while(x<=n):
	print(x)
	x = x * n
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:46:31) 
-- CODE:
from numpy import *
n = input("Digite um numero: ")

x = "*"
while(x<=n):
	print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:47:03) 
-- CODE:
from numpy import *
n = input("Digite um numero: ")

x = "*"
while(x>=n):
	print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:47:15) 
-- CODE:
from numpy import *
n = input("Digite um numero: ")

x = "*"
while(x==n):
	print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:47:37) 
-- CODE:
from numpy import *
n = input("Digite um numero: ")

x = "*"
for n in "*":
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:48:04) 
-- CODE:
from numpy import *
n = input("Digite um numero: ")


for n in "*":
	print(n*"*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:50:15) 
-- CODE:
from numpy import *
n = input("Digite um numero: ")


for n in "*":
	print ((str[:13] + ' ') * n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:50:34) 
-- CODE:
from numpy import *
n = input("Digite um numero: ")


for n in "*":
	print ((n[:n] + ' ') * n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:19:35) 
-- CODE:
from numpy import *
n = input("Digite um numero: ")


for n in "*":
	print ((n[:n] + ' ') * n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:19:48) 
-- CODE:
from numpy import *
n = input("Digite um numero: ")


for n in "*":
	print ((n '*') * n)
-- ERROR:
File "XXXX", line 6
    print ((n '*') * n)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:19:52) 
-- CODE:
from numpy import *
n = input("Digite um numero: ")


for n in "*":
	print (('*') * n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:25:00) 
-- CODE:
from numpy import *
n = input("Digite um numero: ")

for i in range(n):
	print(n * "*")
	n = n - 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:25:35) 
-- CODE:
from numpy import *
n = int(input("Digite um numero: "))

for i in range(n):
	print(n * "*")
	n = n - 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:26:38) 
-- CODE:
from numpy import *
n = int(input("Digite um numero: "))

for i in range(n):
	print(n * "*")
	n = n - 1
for i in range(n):
	print((n-i) * "*")
	n = n + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:26:52) 
-- CODE:
from numpy import *
n = int(input("Digite um numero: "))

for i in range(n):
	print(n * "*")
	n = n - 1
for i in range(n):
	print((n-i) * "*")
	n = n - 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:27:03) 
-- CODE:
from numpy import *
n = int(input("Digite um numero: "))

for i in range(n):
	print(n * "*")
	n = n - 1

for i in range(n):
	print((n-i) * "*")
	n = n - 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:27:28) 
-- CODE:
from numpy import *
n = int(input("Digite um numero: "))

for i in range(n):
	print(n * "*")
	n = n - 1

for i in range(n):
	print((n-i) * "*")
	n = n + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:27:56) 
-- CODE:
from numpy import *
n = int(input("Digite um numero: "))
i = n
for i in range(i):
	print(n * "*")
	n = n - 1

for i in range(n):
	print( "*")
	n = n + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:28:03) 
-- CODE:
from numpy import *
n = int(input("Digite um numero: "))
i = n
for i in range(i):
	print(n * "*")
	n = n - 1

for i in range(n):
	print( n * "*")
	n = n + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:28:50) 
-- CODE:
from numpy import *
n = int(input("Digite um numero: "))
i = n
for i in range(i):
	print(n * "*")
	n = n - 1

for l in range(n):
	print( n * "*")
	l = l + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:29:11) 
-- CODE:
from numpy import *
n = int(input("Digite um numero: "))
i = n
for i in range(i):
	print(n * "*")
	n = n - 1

for l in range(n):
	print( l * "*")
	l = l + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:29:39) 
-- CODE:
from numpy import *
n = int(input("Digite um numero: "))
i = n
for i in range(i):
	print(n * "*")
	i = i - 1

for l in range(n):
	print( l * "*")
	l = l + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:30:22) 
-- CODE:
from numpy import *
n = int(input("Digite um numero: "))
i = n
for i in range(i):
	print(n * "*")
	i = i - 1

for l in range(n):
	print( l * "*")
	l = l + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:30:36) 
-- CODE:
from numpy import *
n = int(input("Digite um numero: "))
i = n
for i in range(n):
	print(n * "*")
	i = i - 1

for l in range(n):
	print( l * "*")
	l = l + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:30:42) 
-- CODE:
from numpy import *
n = int(input("Digite um numero: "))
i = n
for i in range(n):
	print(n * "*")
	i = i - 1

for l in range(i):
	print( l * "*")
	l = l + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:31:06) 
-- CODE:
from numpy import *
n = int(input("Digite um numero: "))
i = n
for h in range(n):
	print(n * "*")
	i = i - 1

for l in range(i):
	print(l * "*")
	l = l + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:31:18) 
-- CODE:
from numpy import *
n = int(input("Digite um numero: "))
i = n
for h in range(n):
	print(h * "*")
	i = i - 1

for l in range(i):
	print(l * "*")
	l = l + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:32:05) 
-- CODE:
from numpy import *
n = int(input("Digite um numero: "))
i = n
for h in range(i):
	print(i * "*")
	i = i - 1

for l in range(n):
	print(l * "*")
	l = l + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:32:51) 
-- CODE:
from numpy import *
n = int(input("Digite um numero: "))
i = n
for h in range(i):
	print(i * "*")
	i = i - 1

for l in range(n):
	print(l * "*")
	l = l + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:33:17) 
-- CODE:
from numpy import *
n = int(input("Digite um numero: "))
i = n
for h in range(i):
	print(i * "*")
	i = i - 1

for l in range(i):
	print(l * "*")
	l = l + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:33:25) 
-- CODE:
from numpy import *
n = int(input("Digite um numero: "))
i = n
for h in range(i):
	print(i * "*")
	i = i - 1

for l in range(n):
	print(l * "*")
	l = l + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:33:55) 
-- CODE:
from numpy import *
n = int(input("Digite um numero: "))
i = n
for h in range(i):
	print(i * "*")
	i = i - 1

for l in range(n+1):
	print(l * "*")
	l = l + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:34:02) 
-- CODE:
from numpy import *
n = int(input("Digite um numero: "))
i = n
for h in range(i):
	print(i * "*")
	i = i - 1

for l in range(n+1):
	print(l * "*")
	l = l + 1
-- EXECUTION TIME:
0.944249
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
